--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 ./*.idea
+*.png
+Mapa da cidade do Porto-20210505/porto_full_edges.txt
+Mapa da cidade do Porto-20210505/porto_full_nodes_latlng.txt
+Mapa da cidade do Porto-20210505/porto_full_nodes_xy.txt
+Mapa da cidade do Porto-20210505/porto_strong_edges.txt
+Mapas-20210505/TagExamples.zip
+Mapas-20210505/PortugalMaps.zip
+*.txt
+Mapas-20210505/__MACOSX/PortugalMaps/._Ermesinde
+Mapas-20210505/__MACOSX/PortugalMaps/._Aveiro
+*.DS_Store
+Mapas-20210505/__MACOSX/PortugalMaps/._Braga
+Mapas-20210505/__MACOSX/PortugalMaps/._Gondomar
+Mapas-20210505/cal-maps instructions.pdf
+Mapas-20210505/__MACOSX/PortugalMaps/._Viseu
+Mapas-20210505/__MACOSX/PortugalMaps/._Portugal
+Mapas-20210505/__MACOSX/PortugalMaps/._Porto
+Mapas-20210505/__MACOSX/PortugalMaps/._Maia
+Mapas-20210505/__MACOSX/PortugalMaps/._Lisboa
+Mapas-20210505/__MACOSX/PortugalMaps/._Fafe
+Mapas-20210505/__MACOSX/PortugalMaps/._Coimbra
