--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,17 +15,19 @@ set(GRAPHVIEWERCPP_PATH lib/GraphViewerCpp)
 add_subdirectory(${GRAPHVIEWERCPP_PATH})
 include_directories(${GRAPHVIEWERCPP_PATH}/include)
 
-
-
 file(GLOB TP7_GRAPHVIEWER_FILES CONFIGURE_DEPENDS
         "TP7_graphviewer/*.cpp"
+        )
+
+file(GLOB SRC_FILES CONFIGURE_DEPENDS
+        "src/*.cpp"
         )
 
 add_executable(TP7_graphviewer
         ${TP7_GRAPHVIEWER_FILES}
         )
 
-add_executable(Project src/main.cpp)
+add_executable(Project src/main.cpp ${SRC_FILES})
 
 
 target_link_libraries(TP7_graphviewer graphviewer)
