--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ cmake-build-debug/lib/googletest-master/googlemock/Makefile
 cmake-build-debug/CMakeFiles/untitled.dir/link.txt
 cmake-build-debug/CMakeFiles/3.17.5/CompilerIdCXX/CMakeCXXCompilerId.cpp
 cmake-build-debug/CMakeFiles/3.17.5/CompilerIdC/CMakeCCompilerId.c
+*.docx
